# Very_Slojniy_Kypca4

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: api_request.py  operations_path.py  save_json.py  user_interface.py  vacancy.py
test/: test_user_interface.py  test_vacancy.py
