[tool.poetry]
name = "very-slojniy-kypca4"
version = "0.1.0"
description = ""
authors = ["Roman Shemchuk <shemchuk.roman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
skip_empty = true